Fix nav bar on-palm hidden by images

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -47,6 +47,9 @@
         &:not(:last-child) {
             margin-right: 20px;
         }
+        @include media-query($on-palm) {
+            color: $text-color;
+        }
     }
 
 
